# socmed-analyst

./: Makefile  README.md  database.db  pyproject.toml
alembic/: env.py
alembic/versions/: 761a3c0d5204_initial_migration.py
app/: celery_app.py  main.py
app/analyze/: method.py  prompt.py  schema.py  task.py
app/core/: settings.py
app/models/: database.py  engine.py
app/utils/: apify_client.py  openai.py
seed_data/: comments.json  get_videos.py  opd.json  seed_all.py  seed_comments.py  seed_opd.py  seed_user.py  seed_videos.py  seed_wilayah.py  user_videos.json  videos.json  wilayah_desa.sql  wilayah_kecamatan.sql
