[project]
name = "socmed-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.2",
    "fastapi>=0.135.1",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "redis>=7.2.1",
    "scalar-fastapi>=1.8.0",
    "sqlmodel>=0.0.37",
]
