[project]
name = "socmed-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "apify-client>=2.5.0",
    "celery>=5.6.2",
    "fastapi>=0.135.1",
    "markdown>=3.10.2",
    "openai>=2.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "redis>=7.2.1",
    "scalar-fastapi>=1.8.0",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
    "weasyprint>=68.1",
]
